--- a/game365-manage/src/main/webapp/index.html
+++ b/game365-manage/src/main/webapp/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>玖印钱包管理系统</title>
-</head>
-
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>back-manage</title>
+  </head>
+  <body>
+    <div id="app"></div>
+  </body>
 </html>
